# Dynamic-Cognitive-Intelligence-System

./: .gitignore  .pre-commit-config.yaml  14.md  3d-office-workspace-plan.md  AGENTS.md  DCIS_PROGRESS_REPORT.md  MONITORING_GUIDE.md  Makefile  PHASE_13_COMPLETION_SUMMARY.md  README.md  REMAINING_TASKS.md  TASKS.md  advanced-features-remediation-plan.md  advanced_features_v2.md  agent_configurations.md  agent_configurations_summary.md  algorithmic_specifications.md  complete_ai_architecture.md  demo_gnn.py  docker-compose.prod.yml  docker-compose.yml  frontend_design.md  full_project_overview.md  gemini_rules_and_workflows.md  implementation_workflow.md  missing_advanced_features.md  new chat feacher plan.md  new chat feacher release readiness.md  new chat feacher task list.md  new chat feacher ui ux.md  new chat feacher.md  package.json.frontend.bak  project_information.md  start.md
backend/: .dockerignore  .env.bak  .env.example  .ruff.toml  Dockerfile  README.md  check_dependencies.py  debug_connections.py  list_models.py  mypy.ini  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py  test_agent_activity.py  test_local_embedding.py  test_neo4j_auth.py  verify_analytics.py  verify_chat_api.py  verify_evolution.py  verify_memory.py  verify_operations.py
backend/config/: models.yaml
backend/data/chat_sessions/: mle443t47fmstimpji.json  mlerq1xko75qbm0vfpk.json  mlet9pew9b69csykclu.json  mlexn0utw7rw8py5rsa.json  mlexnri1wcryx7yelui.json  mlexutd1k6zfqxs4qzs.json  mlf0h9x5wzsvhqym5sl.json  mlfbel8493ymblny5hi.json  (+3 more)
backend/migrations/: 001_create_metrics_tables.sql  002_create_chat_tables.sql  003_create_chat_rate_limits.sql  004_create_chat_session_events.sql
backend/scripts/: migrate_legacy_chat_sessions.py  profile_memory.py  seed_memory_data.py  test_lm_studio.py  warmup_models.py
backend/src/: __init__.py  main.py
backend/tests/: conftest.py
(+379 files in other folders)
