[tool.poetry]
name = "dcis-backend"
version = "0.1.0"
description = "DCIS Backend - Multi-agent AI orchestration"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
# Database clients - using via Docker/HTTP for Python 3.14 compatibility
# asyncpg, neo4j, redis, chromadb accessed via REST APIs
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.26.0"
# Removed python-socketio - using native FastAPI WebSocket

# Multimodal AI
faster-whisper = "^1.0.0"
transformers = "^4.36.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
librosa = "^0.10.0"
soundfile = "^0.12.0"
Pillow = "^10.0.0"

# Data Analysis & Visualization
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scipy = "^1.11.0"
pandas = "^2.1.0"
numpy = "^1.26.0"

# Financial Data
yfinance = "^0.2.33"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.13"
mypy = "^1.8.0"
bandit = "^1.7.6"
pre-commit = "^3.6.0"
# Performance testing
locust = "^2.20.0"
pytest-benchmark = "^4.0.0"
memory-profiler = "^0.61.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PIE", "PT", "RET", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
